[tool.poetry]
name = "libnightcrawler"
version = "0.0.1"
description = "Library for nightcrawler"
authors = ["SMC4.0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"
pytest = "^8.3.2"
ruff = "^0.5.6"
alembic-verify = "^0.1.4"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-git-version-plugin]
make_alpha_version = true

[tool.ruff]
line-length = 100

[tool.setuptools.package-data]
mypkg = ["*.ini", "migrations"]
